--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^7.3|^8.0",
         "flipbox/lumen-generator": "^8.2",
         "laravel/lumen-framework": "^8.0",
-        "prewk/xml-string-streamer": "^1.0"
+        "prewk/xml-string-streamer": "^1.0",
+        "illuminate/database": "^8.24.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
