--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,10 @@
     "require": {
         "php": "^7.3|^8.0",
         "flipbox/lumen-generator": "^8.2",
+        "guzzlehttp/guzzle": "^7.2",
+        "illuminate/database": "^8.24.0",
         "laravel/lumen-framework": "^8.0",
-        "prewk/xml-string-streamer": "^1.0",
-        "illuminate/database": "^8.24.0"
+        "prewk/xml-string-streamer": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
