--- a/composer.json
+++ b/composer.json
@@ -2,34 +2,42 @@
     "name": "hierocles/trove",
     "description": "Basic API based on NationStates daily XML dumps",
     "keywords": ["nationstates", "api"],
-    "license": "MIT",
+    "license": "AGPL-3.0-or-later",
     "type": "project",
+    "readme": "README.md",
+    "authors": [
+        {
+            "name": "Dylan H.",
+            "homepage": "https://hierocles.github.com",
+            "role": "Developer"
+        }
+    ],
+    "support": {
+        "issues": "https://github.com/hierocles/trove/issues",
+        "source": "https://github.com/hierocles/trove",
+        "docs": "https://github.com/hierocles/trove/README.md"
+    },
+    "funding": [
+        {
+            "type": "ko-fi",
+            "url": "https://ko-fi.com/hierocles"
+        }
+    ],
     "require": {
-        "php": "^7.3|^8.0",
-        "flipbox/lumen-generator": "^8.2",
-        "guzzlehttp/guzzle": "^7.2",
+        "php": "^7.4|^8.0",
         "illuminate/database": "^8.24.0",
         "laravel/lumen-framework": "^8.0",
         "prewk/xml-string-streamer": "^1.0"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.9.1",
-        "mockery/mockery": "^1.3.1",
-        "phpunit/phpunit": "^9.3"
+        "flipbox/lumen-generator": "^8.2"
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
-            "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "App\\": "app/"
         },
         "files": [
             "app/Http/Helpers/JsonSerializer.php"
-        ]
-    },
-    "autoload-dev": {
-        "classmap": [
-            "tests/"
         ]
     },
     "config": {
