--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
+        "fruitcake/laravel-cors": "^2.0",
         "illuminate/database": "^8.24.0",
         "laravel/lumen-framework": "^8.0",
-        "nordsoftware/lumen-cors": "^3.4",
         "prewk/xml-string-streamer": "^1.0"
     },
     "require-dev": {
