--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,9 @@
         "psr-4": {
             "App\\": "app/"
         },
+        "classmap": [
+            "database/"
+        ],
         "files": [
             "app/Http/Helpers/JsonSerializer.php"
         ]
